--- a/TotalControleContabil/src/main/webapp/WEB-INF/web.xml
+++ b/TotalControleContabil/src/main/webapp/WEB-INF/web.xml
@@ -20,4 +20,30 @@
     <servlet-name>appServlet</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
+   <!-- Configurações SPRING SECURITY -->
+ <context-param>
+       <param-name>contextConfigLocation</param-name>
+       <param-value>/WEB-INF/spring/security.xml</param-value>
+ </context-param>
+
+ <listener>
+       <listener-class>
+         org.springframework.web.context.ContextLoaderListener
+       </listener-class>
+ </listener>
+ 
+ <filter>
+       <filter-name>springSecurityFilterChain</filter-name>
+       <filter-class>                     
+         org.springframework.web.filter.DelegatingFilterProxy
+       </filter-class>
+ </filter>
+  <filter-mapping>
+           <filter-name>springSecurityFilterChain</filter-name>
+           <url-pattern>/*</url-pattern>
+           <dispatcher>REQUEST</dispatcher>
+           <dispatcher>ERROR</dispatcher>
+           ...
+  </filter-mapping>
+ <!-- Fim Configurações SPRING SECURITY -->
 </web-app>
